2016-03-24	Marius Geitle <marius.geitle@hiof.no>
	* Added Minmax transformation
	* Added transformation for converting a number in one range to another.
	* Added support for random testing.
	* Moved test functionality to a test framework library.
	* Moved remaining outputs from tests to output directory.
	* Added some tests.
	* Reorganized some tests to folow src folder structure.

2016-02-24	Marius Geitle <marius.geitle@hiof.no>
	* Added gitignore
	* Added Multiscale_cue
	* Added gradients
	* Added image padding with support for zero and trim
	* Added 2D Savitzky–Golay
	* Most additions are without propper tests, generation of output. 

2016-02-10	Lars Vidar Magnusson <lars.v.magnusson@hiof.no>
	* Renamed all variables to better follow SML naming conventions.
	* Moved the repository to GitHub.

2016-02-05	Lars Vidar Magnusson <lars.v.magnusson@hiof.no>
	* Added ListUtil.remove, ListUtil.toString, ListUtil.binaryOp. No tests have
		been written.
	* Working implementation of k-means algorithm with KMeans.cluster. There is 
		no proper test, only a printout.

2016-01-28	Marius Geitle <marius.geitle@hiof.no>
	* Fixed bugs in filter generation (was using wrong orientation)
	* Moved output files from test to output/
	* Added support for normalization of Grayscale real images when the 
		image contains negative values to ImageUtil
	* Added support for making grayscale image zero mean to ImageUtil
	* Added support for making grayscale image unit L1 norm to ImageUtil

2016-01-28	Marius Geitle <marius.geitle@hiof.no>
	* Added tabulatexy to image
	* Fixed bug in image rotation

2016-01-26	Lars Vidar Magnusson <lars.v.magnusson@hiof.no>
	* Added MathUtil.blerp for bilinear interpolation.
	* Moved math_util.sml to math/ 
	* Changed name of math.mlb to mllib_math.mlb to follow the naming convention.
	* Minor changes to the code in FMeasureBerkeleyEdge
	* Added Util.loopFromTo and Util.accumLoopFromTo

2016-01-22	Marius Geitle <marius.geitle@hiof.no>