@@ -6,3 +6,4 @@ array2d.sml
 tictactimer.sml
 optimize.sml
 print_util.sml
+matlab.sml
