@@ -1,3 +1,4 @@
+$(SML_LIB)/basis/mlton.mlb
 ../mllib.mlb
 ../mllib_test.mlb
 ../mllib_image.mlb
@@ -12,7 +13,12 @@ math/test_complex.sml
 math/test_signalUtil.sml
 math/test_basic_transformations.sml
 
-image/test_image.sml
+ann
+  "allowFFI true"
+in
+  image/test_image.sml
+end
+
 image/test_image_threshold.sml
 image/test_image_canny.sml
 image/test_filter.sml
