@@ -1,3 +1,6 @@
+2016-03-25	Marius Geitle <marius.geitle@hiof.no>
+	* Added random test for image rotation.
+
 2016-03-24	Marius Geitle <marius.geitle@hiof.no>
 	* Added Minmax transformation
 	* Added transformation for converting a number in one range to another.
